# microblog

./: .gitignore  README.md
backend/microblog_app/: .dockerignore  .env_docker  README.md  docker-compose.yml  example.env_docker  nginx.conf  pyproject.toml
backend/microblog_app/app/: Dockerfile  TODO.md  alembic.ini  app.sh  database.py  fill_db.py  main.py  setup.cfg
backend/microblog_app/app/alembic/: env.py
backend/microblog_app/app/alembic/versions/: 2023_09_22_2254-f7e48c242423_create_tables.py  2023_10_03_2127-c096c24e1437_update_users_tab.py  2023_10_04_2218-798fcab40b4b_follow_key_pairs_made_unique.py  2023_10_05_2024-6a7f4b25fc0f_deleted_tweet_media_relationship.py  2023_10_07_2358-e613593a1487_update_relationship_user_tweet.py  2023_10_07_2358-e613593a1487_updete_relationship_user_tweet.py
backend/microblog_app/app/api_v1/: __init__.py
backend/microblog_app/app/api_v1/likes/: crud.py  dependencies.py  schemas.py  views.py
backend/microblog_app/app/api_v1/medias/: crud.py  schemas.py  views.py
backend/microblog_app/app/api_v1/tweets/: crud.py  dependencies.py  schemas.py  servises.py  views.py
backend/microblog_app/app/api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
backend/microblog_app/app/auth/: secure.py
backend/microblog_app/app/core/: config.py
backend/microblog_app/app/core/models/: __init__.py  base.py  db_helper.py  follow.py  like.py  media.py  tweet.py  user.py
backend/microblog_app/app/medias/: views.py
backend/microblog_app/app/tweets/: views.py
backend/microblog_app/app/users/: views.py
backend/microblog_app/backups/: make_backup.sh  microblog_backup.sql  restore_bd.sh
backend/microblog_app/tests/: conftest.py  docker-compose.yml  test_endpoint_like.py  test_endpoints_likes.py  test_endpoints_medias.py  test_endpoints_tweet.py  test_endpoints_tweets.py  test_endpoints_users.py  test_main.py
frontend/static/: index.html
frontend/static/js/: app.7c9275be.js.map
