[tool.poetry]
name = "microblog-app"
version = "0.1.0"
description = ""
authors = ["Aleksey Melnikov <mas-chel@mail.ru>"]
readme = "README.md"
packages = [{include = "microblog_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
psycopg2-binary = "^2.9.7"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"
requests = "^2.31.0"
aiohttp = "^3.8.5"


[tool.poetry.group.test.dependencies]
mypy = "^1.5.1"
sqlalchemy-stubs = "^0.4"



[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
autoflake = "^2.2.1"
isort = "^5.12.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
